--- a/wp-content/themes/contentify/scss/inc/components/_sliders.scss
+++ b/wp-content/themes/contentify/scss/inc/components/_sliders.scss
@@ -23,7 +23,7 @@
 		mask-size: contain;
 		mask-position: center;
 		mask-repeat: no-repeat;
-		background-color: $blue;
+		background-color: $primary;
 	}
 
 	&::after {
