--- a/wp-content/themes/contentify/scss/pages/search.scss
+++ b/wp-content/themes/contentify/scss/pages/search.scss
@@ -58,7 +58,7 @@
 			.tag {
 				display: inline-block;
 				border-radius: 5px;
-				background: $blue;
+				background: $primary;
 				color: $white;
 				font-size: 0.8rem;
 				padding: 0.3em 0.8em;
