--- a/wp-content/themes/contentify/scss/inc/_variables.scss
+++ b/wp-content/themes/contentify/scss/inc/_variables.scss
@@ -6,6 +6,7 @@ $breakpoint-xl: 1520px;
 
 // Ne pas mettre dans le theme.json, les manipulations avec rgba ne seront pas faisables
 $primary: #eb5d18;
+$secondary: #1D0B00;
 $gray: #7C7B7B;
 $light-gray: #d5d5d5;
 $black: #232222;
