--- a/wp-content/themes/contentify/scss/inc/_general.scss
+++ b/wp-content/themes/contentify/scss/inc/_general.scss
@@ -138,3 +138,72 @@ body {
 		font-weight: 900;
 	}
 }
+
+.top-page {
+	position: relative;
+	z-index: 0;
+	background: #bbbbbb;
+	color: $white;
+
+	&::after {
+		content: "";
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba($black, 0.3);
+	}
+
+	.top-page--thumbnail {
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+
+		img {
+			display: block;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	.top-page--content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		padding: 42px 0;
+		min-height: 252px;
+		text-align: center;
+
+		.gab-logo {
+			position: relative;
+			height: 112px;
+			width: 112px;
+			border-radius: 20px;
+			background: $white;
+			margin-bottom: 1em;
+
+			img {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				display: block;
+				height: 90%;
+				width: 90%;
+				object-fit: contain;
+				transform: translate(-50%, -50%);
+			}
+		}
+
+		.description {
+			margin-top: 1em;
+			overflow-wrap: anywhere;
+		}
+	}
+}
