--- a/wp-content/themes/contentify/scss/inc/_variables.scss
+++ b/wp-content/themes/contentify/scss/inc/_variables.scss
@@ -7,20 +7,36 @@ $breakpoint-xl: 1520px;
 // Ne pas mettre dans le theme.json, les manipulations avec rgba ne seront pas faisables
 $primary: #eb5d18;
 $secondary: #1D0B00;
-$gray: #7C7B7B;
-$light-gray: #d5d5d5;
-$black: #232222;
+$black: #111111;
+$light-gray: #C9CEBD;
 $white: #FFFFFF;
 
-$font-family-base: "Roboto", serif;
-//$font-family-base: var(--wp--preset--font-family--base);
+$font-family-base: var(--wp--preset--font-family--base);
 $font-family-title: var(--wp--preset--font-family--title);
-$font-family-btn: var(--wp--preset--font-family--title);
+$font-family-btn: var(--wp--preset--font-family--base);
 $font-family-fa: 'Font Awesome Kit';
 
 $cubic-transition: cubic-bezier(0.65, 0, 0.35, 1);
 
+%btn-base-white-hover {
+	background-color: $black;
+	border-color: $black;
+	color: $white !important;
+}
+
+%btn-base-black-hover {
+	background-color: $white;
+	border-color: $white;
+	color: $black !important;
+}
+
 %btn-primary-hover {
+	background-color: $white;
+	border-color: $white;
+	color: $primary !important;
+}
+
+%btn-secondary-hover {
 	background-color: $primary;
 	border-color: $primary;
 	color: $white !important;
