--- a/wp-content/themes/contentify/scss/inc/components/_titles.scss
+++ b/wp-content/themes/contentify/scss/inc/components/_titles.scss
@@ -5,15 +5,15 @@ h1, h2, h3, h4, h5, h6 {
 	display: block;
 	width: 100%;
 	font-family: $font-family-title;
-	line-height: 1.1em;
-	font-weight: 700;
-	text-transform: uppercase;
+	line-height: 1.3em;
+	//text-transform: uppercase;
 	overflow-wrap: anywhere;
 }
 
 h1,
 .big-title {
 	font-size: var(--wp--preset--font-size--big-title);
+	font-weight: 700;
 }
 
 h2,
@@ -24,5 +24,4 @@ h2,
 h3,
 .subtitle {
 	font-size: var(--wp--preset--font-size--subtitle);
-	font-weight: 500;
 }
