--- a/wp-content/themes/contentify/scss/archives/archive.scss
+++ b/wp-content/themes/contentify/scss/archives/archive.scss
@@ -1,42 +1,6 @@
 @use '../inc/variables' as *;
 
 .actualities {
-	.actualities--sorter {
-		padding: 49px 0;
-		background: $white;
-
-		.sorter--wrapper {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			gap: 1em;
-
-			@media screen and (max-width: $breakpoint-md) {
-				flex-direction: column;
-			}
-		}
-
-		input[type="search"] {
-			width: 100%;
-
-			@media screen and (min-width: $breakpoint-md) {
-				width: 415px;
-			}
-		}
-
-		@media screen and (min-width: $breakpoint-md) {
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			gap: 1em;
-		}
-
-		.sorter--selects {
-			display: flex;
-			align-items: center;
-			gap: 1em;
-		}
-	}
 
 	.actualities--posts {
 		padding: 3em 0;
@@ -57,28 +21,38 @@
 			max-width: 200px;
 		}
 
+		.sorter--wrapper {
+			margin-bottom: 2em;
+
+			input[type="search"] {
+				@media screen and (max-width: $breakpoint-md) {
+					width: 100%;
+				}
+			}
+		}
+
+		.title {
+			margin-bottom: 0.6em;
+		}
+
 		.filters--head {
 			color: $black;
-			margin-bottom: 0.6em;
 
 			i {
 				margin-right: 0.1em;
 			}
 
 			@media screen and (max-width: $breakpoint-md) {
-				padding: 0.4em;
+				padding: 0.3em;
 				text-align: center;
 				border: 1px solid $secondary;
-				border-radius: 8px;
+				border-radius: 12px;
+				cursor: pointer;
 			}
 		}
 
 		.filters--items {
 			@media screen and (max-width: $breakpoint-md) {
-				position: absolute;
-				z-index: 10;
-				top: 100%;
-				left: 0;
 				width: 100%;
 				height: max-content;
 				max-height: 0;
@@ -87,10 +61,10 @@
 			}
 
 			> div {
-				padding: 1em 0;
 				display: flex;
 				flex-direction: column;
 				gap: 12px;
+				padding: 0.6em 0.3em;
 
 				@media screen and (max-width: $breakpoint-md) {
 					background: $white;
@@ -142,7 +116,7 @@
 	}
 
 	.posts--wrapper, .loading-overlay {
-		--nb-column: 3;
+		--nb-column: 2;
 		--gap: 15px;
 
 		display: flex;
@@ -152,10 +126,6 @@
 		width: 100%;
 
 		@media screen and (max-width: $breakpoint-md) {
-			--nb-column: 2;
-		}
-
-		@media screen and (max-width: $breakpoint-sm) {
 			--nb-column: 1;
 		}
 
@@ -167,7 +137,7 @@
 	.no-results {
 		padding: 2em;
 		border-radius: 8px;
-		background: $light-gray;
+		background: $lighter-gray;
 		text-align: center;
 	}
 
