--- a/wp-content/themes/contentify/scss/footer.scss
+++ b/wp-content/themes/contentify/scss/footer.scss
@@ -1,23 +1,216 @@
 @use './inc/variables' as *;
 @use './inc/components/titles' as *;
 
+:root {
+	--color-bg1: $black;
+	--color-bg2: $secondary;
+	--color1: 235, 93, 24;
+	--color2: 201, 206, 189;
+	--color3: 235, 93, 24;
+	--color4: 201, 206, 189;
+	--color5: 235, 93, 24;
+	--color-interactive: 235, 93, 24;
+	--circle-size: 120%;
+	--blending: multiply;
+}
+
 #colophon {
-	background-color: $black;
+	position: relative;
+	background-color: $secondary;
 	color: $white;
-	padding: 3em 0;
+
+	.container {
+		position: relative;
+	}
 
 	a {
 		@extend %hidden-link;
 	}
 
+	.colophon--infos, .colophon--mentions {
+		position: relative;
+		z-index: 1;
+	}
 
-	.header--infos {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
+	.colophon--infos {
+		padding: 3em 0;
 
-		@media screen and (max-width: $breakpoint-md) {
-			flex-direction: column;
+		.colophon--wrapper {
+			@media screen and (min-width: $breakpoint-sm) {
+				display: flex;
+				justify-content: space-between;
+				gap: 2em;
+			}
 		}
+
+		.footer--infos {
+			display: flex;
+			flex-direction: column;
+			gap: 0.8em;
+
+			@media screen and (max-width: $breakpoint-sm) {
+				margin-bottom: 2.8em;
+			}
+		}
+
+		.footer--links {
+			display: flex;
+			flex-wrap: wrap;
+			gap: clamp(2em, 5vw, 3em);
+
+			.links--menu {
+				@media screen and (max-width: $breakpoint-sm) {
+					width: 100%;
+				}
+
+				.title {
+					margin-bottom: 0.7em;
+				}
+
+				.menu {
+					display: flex;
+					flex-direction: column;
+					align-items: flex-start;
+					gap: 0.2em;
+				}
+
+			}
+		}
+	}
+
+	.colophon--mentions {
+		position: relative;
+		padding: 1.3em 0;
+		background-color: $black;
+		font-size: 14px;
+
+		.contentify-menu {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: center;
+		}
+	}
+
+}
+
+
+@keyframes moveInCircle {
+	0% {
+		transform: rotate(0deg);
+	}
+	50% {
+		transform: rotate(180deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+@keyframes moveVertical {
+	0% {
+		transform: translateY(-50%);
+	}
+	50% {
+		transform: translateY(50%);
+	}
+	100% {
+		transform: translateY(-50%);
+	}
+}
+
+@keyframes moveHorizontal {
+	0% {
+		transform: translateX(-50%) translateY(-10%);
+	}
+	50% {
+		transform: translateX(50%) translateY(10%);
+	}
+	100% {
+		transform: translateX(-50%) translateY(-10%);
+	}
+}
+
+
+.gradient-bg {
+	position: relative;
+	overflow: hidden;
+	background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
+
+	.gradients-container {
+		position: absolute;
+		z-index: 0;
+		top: 0;
+		left: 0;
+		filter: url(#goo) blur(40px);
+		width: 100%;
+		height: 100%;
+		pointer-events: none;
+
+		&::after {
+			content: "";
+			position: absolute;
+			z-index: 100;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background: $black;
+			opacity: 0.6;
+		}
+
+		> * {
+			position: absolute;
+			mix-blend-mode: var(--blending);
+			opacity: 1;
+			width: var(--circle-size);
+			height: var(--circle-size);
+			top: calc(50% - var(--circle-size) / 2);
+			left: calc(50% - var(--circle-size) / 2);
+		}
+	}
+
+	.g1 {
+		background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
+		transform-origin: center center;
+		animation: moveVertical 30s ease infinite;
+	}
+
+	.g2 {
+		background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
+		transform-origin: calc(50% - 400px);
+		animation: moveInCircle 20s reverse infinite;
+	}
+
+	.g3 {
+		background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color3), 0) 50%) no-repeat;
+		top: calc(50% - var(--circle-size) / 2 + 200px);
+		left: calc(50% - var(--circle-size) / 2 - 500px);
+		transform-origin: calc(50% + 400px);
+		animation: moveInCircle 40s linear infinite;
+	}
+
+	.g4 {
+		background: radial-gradient(circle at center, rgba(var(--color4), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
+		transform-origin: calc(50% - 200px);
+		animation: moveHorizontal 40s ease infinite;
+
+	}
+
+	.g5 {
+		background: radial-gradient(circle at center, rgba(var(--color5), 0.8) 0, rgba(var(--color5), 0) 50%) no-repeat;
+		width: calc(var(--circle-size) * 2);
+		height: calc(var(--circle-size) * 2);
+		transform-origin: calc(50% - 800px) calc(50% + 200px);
+		animation: moveInCircle 20s ease infinite;
+	}
+
+	.interactive {
+		background: radial-gradient(circle at center, rgba(var(--color-interactive), 0.8) 0, rgba(var(--color-interactive), 0) 50%) no-repeat;
+		mix-blend-mode: var(--blending);
+
+		width: 100%;
+		height: 100%;
+		top: -50%;
+		left: -50%;
 	}
 }
