--- a/wp-content/themes/contentify/scss/pages/front-page.scss
+++ b/wp-content/themes/contentify/scss/pages/front-page.scss
@@ -7,14 +7,18 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		justify-content: flex-end;
+		justify-content: center;
 		text-align: center;
 		gap: 20px;
-		min-height: 500px;
+		min-height: 80vh;
 		padding: 120px 0;
 
-		.btn{
-			color:$primary;
+		a {
+			color: $primary;
+		}
+
+		.btn {
+			color: $primary;
 		}
 	}
 
