--- a/wp-content/themes/contentify/scss/inc/_general.scss
+++ b/wp-content/themes/contentify/scss/inc/_general.scss
@@ -36,6 +36,31 @@ body {
 	font-size: var(--wp--preset--font-size--normal);
 }
 
+a:not(.btn):not([type="submit"]):not(.title):not(.site-logo) {
+	position: relative;
+	display: inline-block;
+	padding: 0.05em;
+	color: $primary;
+	text-decoration: none;
+
+	&::after {
+		content: "";
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 1px;
+		background: $primary;
+		transform: scaleX(0);
+		transform-origin: left;
+		transition: transform 0.5s $cubic-transition;
+	}
+
+	&:hover::after {
+		transform: scaleX(1);
+	}
+}
+
 .text-center {
 	text-align: center;
 }
@@ -182,13 +207,9 @@ code {
 	font-size: 0.875rem;
 	font-weight: 400;
 
-	a{
+	a {
 		color: $primary;
 		text-decoration: none;
-
-		&:hover {
-			text-decoration: underline;
-		}
 	}
 
 	.breadcrumb_last {
