--- a/wp-content/themes/contentify/scss/pages/404.scss
+++ b/wp-content/themes/contentify/scss/pages/404.scss
@@ -6,4 +6,12 @@
 	justify-content: center;
 	align-items: center;
 	gap: 1rem;
+
+	.btn--wrapper {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-wrap: wrap;
+		gap: 1em;
+	}
 }
