--- a/wp-content/themes/contentify/scss/inc/_variables.scss
+++ b/wp-content/themes/contentify/scss/inc/_variables.scss
@@ -8,6 +8,8 @@ $breakpoint-xl: 1520px;
 $primary: #eb5d18;
 $secondary: #1D0B00;
 $black: #111111;
+$light-primary: #f7b694;
+
 $light-gray: #C9CEBD;
 $lighter-gray: #eff1ea;
 $white: #FFFFFF;
