--- a/wp-content/themes/contentify/scss/blocks/dynamic-tabs/dynamic-tabs.scss
+++ b/wp-content/themes/contentify/scss/blocks/dynamic-tabs/dynamic-tabs.scss
@@ -23,6 +23,10 @@ $padding-mobile: 10px;
 		gap: 2rem;
 	}
 
+	.block-title {
+		margin-bottom: 2em;
+	}
+
 	.missions-tabs--titles {
 		max-width: 100%;
 		overflow: auto;
@@ -30,7 +34,7 @@ $padding-mobile: 10px;
 		.titles--wrapper {
 			display: flex;
 			align-items: center;
-			gap: clamp(2em, 8.4vw, 8em);
+			gap: 2em;
 			margin-bottom: 1.2em;
 
 			@media screen and (max-width: $breakpoint-md) {
@@ -91,6 +95,10 @@ $padding-mobile: 10px;
 				width: 100%;
 				height: 100%;
 				object-fit: cover;
+			}
+
+			&.contains img {
+				object-fit: contain;
 			}
 
 			@media screen and (min-width: $breakpoint-md) {
