--- a/wp-content/themes/contentify/scss/inc/components/_titles.scss
+++ b/wp-content/themes/contentify/scss/inc/components/_titles.scss
@@ -6,7 +6,7 @@ h1, h2, h3, h4, h5, h6 {
 	width: 100%;
 	font-family: $font-family-title;
 	line-height: 1.3em;
-	//text-transform: uppercase;
+	font-weight: 500;
 	overflow-wrap: anywhere;
 }
 
