--- a/wp-content/themes/contentify/scss/inc/_variables.scss
+++ b/wp-content/themes/contentify/scss/inc/_variables.scss
@@ -10,8 +10,8 @@ $secondary: #1D0B00;
 $black: #111111;
 $light-primary: #f7b694;
 
-$light-gray: #C9CEBD;
-$lighter-gray: #eff1ea;
+$light-gray: #d5d5d5;
+$lighter-gray: #f1f1f1;
 $white: #FFFFFF;
 
 $font-family-base: var(--wp--preset--font-family--base);
