block tableau + retours

--- a/wp-content/themes/contentify/scss/blocks/dropdown-menu/dropdown-menu.scss
+++ b/wp-content/themes/contentify/scss/blocks/dropdown-menu/dropdown-menu.scss
@@ -1,23 +1,28 @@
 @use '../../inc/variables' as *;
 
 .block--dropdown-menu {
-	padding: 2em 0;
+	padding: 5em 0;
+	background-color: $light-primary;
 
 	.main-title {
 		margin-bottom: 2em;
 	}
 
 	.dropdown-menu-item {
+		--padding-x: 1.5rem;
 		border-bottom: 1px solid rgb(227 227 227);
 
 		.header--dropdown-menu-item {
 			display: flex;
-			color: $primary;
 			cursor: pointer;
 			padding: 1em 0;
 
 			@media screen and (min-width: $breakpoint-md) {
-				padding: 1em 1.5em;
+				padding: 1em var(--padding-x);
+			}
+
+			.title {
+				color: $primary;
 			}
 
 			i {
@@ -42,10 +47,13 @@
 			overflow: hidden;
 			transition: height 0.3s ease;
 			line-height: 1.8em;
-			padding: 0 1.5em;
 
-			@media screen and (min-width: $breakpoint-md) {
-				padding: 0 1em;
+			> div {
+				margin: 10px;
+				border-radius: 20px;
+				background-color: $white;
+				padding: 1em var(--padding-x);
+				box-shadow: 0 9px 7px 0px rgba(0, 0, 0, 0.05);
 			}
 
 		}
