--- a/wp-content/themes/contentify/scss/inc/_variables.scss
+++ b/wp-content/themes/contentify/scss/inc/_variables.scss
@@ -8,9 +8,9 @@ $breakpoint-xl: 1520px;
 $primary: #eb5d18;
 $secondary: #1D0B00;
 $black: #111111;
-$light-primary: #f7b694;
+$light-primary: #fbe0d2;
 
-$light-gray: #d5d5d5;
+$light-gray: #efefef;
 $lighter-gray: #f1f1f1;
 $white: #FFFFFF;
 
